@@ -60,17 +60,17 @@ function mainAgentsModules() {
 	}
 	
 	$updated_time = html_print_image ("images/information.png", true, array ("title" => __('Last update'), "style" => 'margin: 5px 3px 0px 10px')).$updated_info;
-
+	
 	$modulegroup = get_parameter('modulegroup', 0);
 	$refr = get_parameter('refr', 30); // By default 30 seconds
-
+	
 	$group_id = get_parameter('group_id', 0);
 	$offset = get_parameter('offset', 0);
 	$hor_offset = get_parameter('hor_offset', 0);
 	$block = 20;
-
+	
 	$groups = users_get_groups ();
-
+	
 	$filter_module_groups = '<form method="post" action="' . ui_get_url_refresh (array ('offset' => 0, 'hor_offset' => 0)).'">';
 	$filter_module_groups .= '<b>'.__('Module group').'</b>';
 	$filter_module_groups .= html_print_select_from_sql ("SELECT * FROM tmodule_group ORDER BY name",
@@ -84,7 +84,15 @@ function mainAgentsModules() {
 	
 	$comborefr = '<form method="post" action="' . ui_get_url_refresh (array ('offset' => 0, 'hor_offset' => 0)).'">';
 	$comborefr .= '<b>'.__('Refresh').'</b>';
-	$comborefr .= html_print_select (array('30' => '30 '.__('seconds'), '60' => '1 '.__('minute'), '120' => '2 '.__('minutes'), '300' => '5 '.__('minutes'), '600' => '10 '.__('minutes')) , 'refr', $config['refr'], $script = 'this.form.submit()', '', 0, true, false, false, '', false, 'width: 100px; margin-right: 10px; margin-top: 5px;');
+	$comborefr .= html_print_select (
+		array('30' => '30 ' . __('seconds'),
+			'60' => '1 ' . __('minute'),
+			'120' => '2 ' . __('minutes'),
+			'300' => '5 ' . __('minutes'),
+			'600' => '10 ' . __('minutes')),
+		'refr', $config['refr'],
+		$script = 'this.form.submit()', '', 0, true, false, false, '',
+		false, 'width: 100px; margin-right: 10px; margin-top: 5px;');
 	$comborefr .= "</form>";
 	
 	if ($config["pure"] == 0) {
@@ -100,39 +108,39 @@ function mainAgentsModules() {
 	}
 	
 	$onheader = array('updated_time' => $updated_time, 'fullscreen' => $fullscreen, 
-					'combo_module_groups' => $filter_module_groups,
-					'combo_groups' => $filter_groups);
+		'combo_module_groups' => $filter_module_groups,
+		'combo_groups' => $filter_groups);
 	
-	if($config['pure'] == 1) {
+	if ($config['pure'] == 1) {
 		$onheader['combo_refr'] = $comborefr;
 	}
-
+	
 	// Header
 	ui_print_page_header (__("Agents/Modules"), "images/bricks.png", false, "", false, $onheader);
-
+	
 	// Old style table, we need a lot of special formatting,don't use table function
 	// Prepare old-style table
-
+	
 	$agents = '';
-	if($group_id > 0) {
+	if ($group_id > 0) {
 		$agents = agents_get_group_agents($group_id);
 		$agents = array_keys($agents);
 	}
 	
 	$filter_module_groups = false;
 	
-	if($modulegroup > 0) {
+	if ($modulegroup > 0) {
 		$filter_module_groups['id_module_group'] = $modulegroup;
 	}
 	
 	$all_modules = agents_get_modules($agents, false, $filter_module_groups, true, false);
-
+	
 	$modules_by_name = array();
 	$name = '';
 	$cont = 0;
-
-	foreach($all_modules as $key => $module) {
-		if($module == $name) {
+	
+	foreach ($all_modules as $key => $module) {
+		if ($module == $name) {
 			$modules_by_name[$cont-1]['id'][] = $key;
 		}
 		else {
@@ -143,62 +151,75 @@ function mainAgentsModules() {
 		}
 	}
 	
-	if($config["pure"] == 1) {
+	if ($config["pure"] == 1) {
 		$block = count($modules_by_name);
 	}
-
+	
 	$filter_groups = array ('offset' => (int) $offset,
-				'limit' => (int) $config['block_size']);
-				
-	if($group_id > 0) {
+		'limit' => (int) $config['block_size']);
+	
+	if ($group_id > 0) {
 		$filter_groups['id_grupo'] = $group_id;
 	}
 	
 	$agents = agents_get_agents ($filter_groups);
 	$nagents = count($agents);
 	
-	if($all_modules == false || $agents == false) {
+	if ($all_modules == false || $agents == false) {
 		echo "<div class='nf'>".__('There are no agents with modules')."</div>";
 		return;
 	}
 	
-	echo '<table cellpadding="4" cellspacing="4" border="0" width=98%>';
-
-	echo "<th width='140px' height='25px'>".__("Agents")." / ".__("Modules")."</th>";	
-
-	if($hor_offset > 0) {
+	echo '<table cellpadding="4" cellspacing="4" border="0">';
+	
+	echo "<tr>";
+	
+	echo "<th width='140px' height='25px' valign='bottom' style='text-align: right !important;'>" . __("Agents") . " / " . __("Modules") . "</th>";
+	
+	if ($hor_offset > 0) {
 		$new_hor_offset = $hor_offset-$block;
-		echo "<th width='20px' style='vertical-align:top; padding-top: 35px;' rowspan='".($nagents+1)."'><a href='index.php?sec=extensions&sec2=extensions/agents_modules&refr=0&hor_offset=".$new_hor_offset."&offset=".$offset."&group_id=".$group_id."&modulegroup=".$modulegroup."'>".html_print_image("images/darrowleft.png",true, array('title' => __('Previous modules')))."</a> </th>";
+		echo "<th width='20px' style='vertical-align:top; padding-top: 35px;' rowspan='" . ($nagents + 1) . "'>" .
+			"<a href='index.php?sec=extensions&sec2=extensions/agents_modules&refr=0&hor_offset=" . $new_hor_offset . "&offset=".$offset."&group_id=".$group_id."&modulegroup=".$modulegroup."'>".html_print_image("images/darrowleft.png",true, array('title' => __('Previous modules')))."</a> </th>";
 	}
 	$nmodules = 0;
-	foreach($modules_by_name as $module) {
+	foreach ($modules_by_name as $module) {
 		$nmodules++;
 		
-		if($nmodules <= $hor_offset || $nmodules > ($hor_offset+$block)) {
+		if ($nmodules <= $hor_offset || $nmodules > ($hor_offset+$block)) {
 			continue;
 		}
 		
-		echo '<th width="20px" >'. html_print_image('images/information.png', true, array('title' => io_safe_output($module['name']))) ."</th>";
+		$text = ui_print_truncate_text(io_safe_output($module['name']), 'module_small');
+		
+		echo '<th align="center" width="20px" id="th_module_r_' . $nmodules . '" class="th_class_module_r">
+				<div style="width: 30px;">
+					<div id="div_module_r_' . $nmodules . '" style="display: none;" class="rotate_text_module">' .
+						$text .
+					'</div>
+				</div>
+			</th>';
 	}
 	
-	if(($hor_offset + $block) < $nmodules) {
+	if (($hor_offset + $block) < $nmodules) {
 		$new_hor_offset = $hor_offset+$block;
 		echo "<th width='20px' style='vertical-align:top; padding-top: 35px;' rowspan='".($nagents+1)."'><a href='index.php?sec=extensions&sec2=extensions/agents_modules&hor_offset=".$new_hor_offset."&offset=".$offset."&group_id=".$group_id."&modulegroup=".$modulegroup."'>".html_print_image("images/darrowright.png",true, array('title' => __('More modules')))."</a> </th>";
 	}
-
+	
+	echo "</tr>";
+	
 	$filter_agents = false;
-	if($group_id > 0) {
+	if ($group_id > 0) {
 		$filter_agents = array('id_grupo' => $group_id);
 	}
 	// Prepare pagination
 	ui_pagination ((int)count(agents_get_agents ($filter_agents)));
 	echo "<br>";
-
+	
 	foreach ($agents as $agent) {
 		// Get stats for this group
 		$agent_status = agents_get_status($agent['id_agente']);
-
-		switch($agent_status) {
+		
+		switch ($agent_status) {
 			case 4: // Alert fired status
 				$rowcolor = 'group_view_alrm';
 				break;
@@ -236,8 +257,8 @@ function mainAgentsModules() {
 			}
 			
 			$match = false;
-			foreach($module['id'] as $module_id){
-				if(!$match && array_key_exists($module_id,$agent_modules)) {
+			foreach ($module['id'] as $module_id) {
+				if (!$match && array_key_exists($module_id,$agent_modules)) {
 					$status = modules_get_agentmodule_status($module_id);
 					echo "<td style='text-align: center;'>";
 					$win_handle = dechex(crc32($module_id.$module["name"]));
@@ -245,7 +266,7 @@ function mainAgentsModules() {
 					$link ="winopeng('operation/agentes/stat_win.php?type=$graph_type&period=86400&id=".$module_id."&label=".base64_encode($module["name"])."&refresh=600','day_".$win_handle."')";
 					
 					echo '<a href="javascript:'.$link.'">';
-					switch($status){
+					switch ($status) {
 						case 0:
 							ui_print_status_image ('module_ok.png', modules_get_last_value($module_id), false, array('width' => '20px', 'height' => '20px'));
 							break;
@@ -265,9 +286,9 @@ function mainAgentsModules() {
 					echo '</a>';
 					echo "</td>";
 					$match = true;
-				}		
+				}
 			}
-						
+			
 			if(!$match) {
 				echo "<td></td>";
 			}
@@ -275,7 +296,7 @@ function mainAgentsModules() {
 		
 		echo "</tr>";
 	}
-
+	
 	echo "</table>";
 	
 	echo "<br><br><p>" . __("The colours meaning:") .
@@ -302,10 +323,45 @@ function mainAgentsModules() {
 		'</li>' .
 		"</ul>" .
 	"</p>";
+	
+	echo "
+		<style type='text/css'>
+			.rotate_text_module {
+				-webkit-transform: rotate(270deg);
+				-moz-transform: rotate(270deg);
+				-o-transform: rotate(270deg);
+				writing-mode: lr-tb;
+				white-space: nowrap;
+			}
+		</style>
+		<script type='text/javascript'>
+			$(document).ready(function () {
+				//Get max width of name of modules
+				max_width = 0;
+				$.each($('.th_class_module_r'), function (i, elem) {
+					id = $(elem).attr('id').replace('th_module_r_', '');
+					
+					width = $(\"#div_module_r_\" + id).width();
+					
+					if (max_width < width) {
+						max_width = width;
+					} 
+				});
+				
+				$.each($('.th_class_module_r'), function (i, elem) {
+					id = $(elem).attr('id').replace('th_module_r_', '');
+					$(\"#th_module_r_\" + id).height(($(\"#div_module_r_\" + id).width() + 10) + 'px');
+					console.log($(\"#div_module_r_\" + id).width());
+					//$(\"#div_module_r_\" + id).css('margin-top', (max_width - $(\"#div_module_r_\" + id).width()) + 'px');
+					$(\"#div_module_r_\" + id).css('margin-top', (max_width - 20) + 'px');
+					$(\"#div_module_r_\" + id).show();
+				});
+			});
+		</script>
+		";
 }
 
 extensions_add_operation_menu_option(__("Agents/Modules view"), 'estado', 'agents_modules/icon_menu.png', "v1r1");
 extensions_add_main_function('mainAgentsModules');
 
 ?>
-
